# drf-jwt-auth

./: .default.env  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml  test.txt
src/jwt_auth/: auth_backend.py  context_managers.py  models.py  serializers.py  settings.py  store_backend.py  urls.py  utils.py  views.py
src/jwt_auth/migrations/: 0001_initial.py
src/src/: settings.py  urls.py
